# mkdocs-demo

./: .gitignore  Dockerfile  README.md  mkdocs.yml  netlify.toml  pyproject.toml  requirements-plugins.txt  requirements.txt
docs/: index.md
docs/events/: index.md  page-load-completed.md  page-load-started.md
docs/section/: index.md
overrides/: main.html
