[tool.poetry]
  name = "mkdocs-demo"
  version = "0.1.0"
  description = ""
  authors = ["Charlie Tysse <tyssejc@gmail.com>"]
  readme = "README.md"

[tool.poetry.dependencies]
  python = "^3.8"
  mkdocs = "^1.4.2"
  mkdocs-material = "^9.0.5"
  mkdocs-git-revision-date-localized-plugin = "^1.2.0"
  pymdown-extensions = "^10.0"
  fontawesome-markdown = "^0.2.6"

[build-system]
  requires = ["poetry-core"]
  build-backend = "poetry.core.masonry.api"